@@ -1,3 +1,7 @@
+drkns 12.06.2016 14:55:52 +0200 - build 4703
+
+1. 0003254: Far 3.0 build 4700-4702 crashes on long file lists (!&)
+
 drkns 11.06.2016 22:55:07 +0200 - build 4702
 
 1. Ещё одно уточнение работы запускателя.
